--- a/vignettes/articles/examples-quicksort.Rmd
+++ b/vignettes/articles/examples-quicksort.Rmd
@@ -5,6 +5,10 @@ output:
     check_title: false
 pkgdown:
   as_is: true
+vignette: >
+  %\VignetteIndexEntry{Example: Quicksort}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r setup, include = FALSE}
