--- a/README.Rmd
+++ b/README.Rmd
@@ -32,14 +32,16 @@ knitr::opts_chunk$set(
 -->
 <!-- badges: end -->
 
-A Lisp dialect that compiles to R — write macros, use every R function directly, and get tail-call optimization out of the box.
+A Lisp dialect that compiles to R: write macros, use every R function
+directly, and get tail-call optimization out of the box.
 
 ## Overview
 
-Arl compiles to R and evaluates with R's own `eval()`, so every R function
-and data structure is available with no bridging or FFI. On top of that, you
-get Lisp's macro system for compile-time code transformation and self-tail-call
-optimization for stack-safe recursion.
+Arl compiles to R and evaluates with R's own `eval()`, so every R function and
+data structure is available with no need for a compatibility layer or
+[FFI](https://en.wikipedia.org/wiki/Foreign_function_interface). On top of
+that, you get a Lisp macro system for compile-time code transformation and
+self-tail-call optimization for stack-safe recursion.
 
 ## Installation
 
